Fix blog title alignment

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,6 @@ body {
   text-align: center;
   top: 50%;
   left: 50%;
-  margin-left: -175px;
 }
 
 .navbar-default .navbar-nav>li>a {
